fix all broken css var references

--- a/ui/common/sensor-meter-input.module.css
+++ b/ui/common/sensor-meter-input.module.css
@@ -15,7 +15,7 @@
   position: relative;
   width: var(--meter-width);
   height: 256px;
-  background-color: var(--color-gray-200);
+  background-color: var(--mantine-color-gray-2);
   border-radius: 5px;
   overflow: hidden;
 }
@@ -27,11 +27,11 @@
   /* transition: all;
   transition-duration: 300ms;
   transition-timing-function: ease-in-out; */
-  background-color: var(--color-gray-500);
+  background-color: var(--mantine-color-gray-5);
 }
 
 .meterValueFillActive {
-  background-color: var(--color-green-500);
+  background-color: var(--mantine-color-green-5);
 }
 
 .meterThresholdLine {
@@ -41,19 +41,19 @@
 }
 
 .atkColorFg {
-  color: var(--color-blue-500);
+  color: var(--mantine-color-blue-5);
 }
 
 .atkColorBg {
-  background-color: var(--color-blue-500);
+  background-color: var(--mantine-color-blue-5);
 }
 
 .rlsColorFg {
-  color: var(--color-red-500);
+  color: var(--mantine-color-red-5);
 }
 
 .rlsColorBg {
-  background-color: var(--color-red-500);
+  background-color: var(--mantine-color-red-5);
 }
 
 .controlsContainer {
@@ -97,5 +97,5 @@
   align-self: center;
   height: 2em;
   width: 2em;
-  border: 1px solid var(--color-gray-500);
+  border: 1px solid var(--mantine-color-gray-7);
 }
